<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">wont work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">wont run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">wont run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"> wont run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">wont run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_buy">Add to Cart</string>
    <string name="action_cart">My Cart</string>
    <string name="action_checkout">Reservation</string>
    <string name="action_clear">Clear All</string>
    <string name="action_save">Save Image</string>
    <string name="action_settings">Save Setting</string>
    <string name="address">Address : Menuran RT 01 RW 06, Baki, Sukoharjo, Jawa Tengah Indonesia &lt;br&gt;&lt;br&gt; &lt;i&gt;Email : developer.solodroid@gmail.com&lt;/i&gt;</string>
    <string name="app_copyright">Copyright © 2016 Solodroid Developer \n All rights reserved</string>
    <string name="app_description">best solution for your mobile restaurant app</string>
    <string name="app_email">developer.solodroid@gmail.com</string>
    <string name="app_name">Your Restaurant App</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_send">Send</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkout_add_comment">Comment</string>
    <string name="checkout_email">Your Email</string>
    <string name="checkout_number_of_people">Number of People</string>
    <string name="checkout_order_list">Order Detail</string>
    <string name="checkout_phone_number">Phone Number</string>
    <string name="checkout_send_order">Send</string>
    <string name="checkout_set_date">Set Date</string>
    <string name="checkout_set_time">Set Time</string>
    <string name="checkout_your_name">Your Name</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
    <string name="clear_one_order">Do you want to clear this order?</string>
    <string name="clear_order">Clear all order</string>
    <string name="confirm">Confirmation</string>
    <string name="contact">&lt;p&gt;Do you still feel confused by the system that you need? Do not worry, please contact us now! Gladly we will help resolve your needs.&lt;/p&gt; &lt;p&gt;Address : Menuran RT 01 RW 06, Baki, Sukoharjo, Jawa Tengah Indonesia&lt;/p&gt; &lt;p&gt;Email : developer.solodroid@gmail.com&lt;/p&gt; &lt;p&gt;or use the contact form provided.&lt;/p&gt;</string>
    <string name="db_exist_alert">Do you want to remove your previous order?</string>
    <string name="default_web_client_id">543214849347-hu8ofspfbog1hnhheuoj8hn52os72kmr.apps.googleusercontent.com</string>
    <string name="detail">Detail</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_content_off">2</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="facebook_url">https://www.facebook.com/solodroid.net</string>
    <string name="failed_alert">Your Reservation has not been sent.</string>
    <string name="failed_connect_network">Failed to connect internet!</string>
    <string name="firebase_database_url">https://solodroid-projects.firebaseio.com</string>
    <string name="form_alert">Please, complete the form first.</string>
    <string name="gcm_defaultSenderId">543214849347</string>
    <string name="google_api_key">AIzaSyBQyquEcpEW5JmAMXmDnYPiKy_0xUqO1p8</string>
    <string name="google_app_id">1:543214849347:android:3152d81b85d78be9</string>
    <string name="google_crash_reporting_api_key">AIzaSyBQyquEcpEW5JmAMXmDnYPiKy_0xUqO1p8</string>
    <string name="google_map_key">AIzaSyArS1QSHnaJ0FoNq5pkLPc_rdAY_JjVHEg</string>
    <string name="google_storage_bucket">solodroid-projects.appspot.com</string>
    <string name="hint_email_message">Message :</string>
    <string name="hint_email_subject">Subject :</string>
    <string name="information_tab1">Profile</string>
    <string name="information_tab2">Contact</string>
    <string name="latitude">-7.6084208</string>
    <string name="longitude">110.7851672</string>
    <string name="menu_about">About</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_info">Information</string>
    <string name="menu_location">Location</string>
    <string name="menu_news">News</string>
    <string name="menu_product">Menu</string>
    <string name="menu_reservation">Reservation</string>
    <string name="menu_share">Share</string>
    <string name="menu_social">Social</string>
    <string name="more_apps">https://play.google.com/store/apps/developer?id=Solodroid</string>
    <string name="more_summary">More apps from developer</string>
    <string name="news_detail">Detail</string>
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="no_order">Your Cart is Empty, Please Order first.</string>
    <string name="no_order_menu">No order</string>
    <string name="not_found">No Menu Found!</string>
    <string name="number_order">Number of order :</string>
    <string name="ok_alert">Your Reservation has been successfully sent.</string>
    <string name="option_no">No</string>
    <string name="option_yes">Yes</string>
    <string name="order">Order</string>
    <string name="order_alert">You have not ordered yet</string>
    <string name="profile">&lt;p&gt;&lt;b&gt;Your Restaurant App&lt;/b&gt; is a mobile restaurant reservation system which run under Android platform that used for promotion and selling your product with single application. With powerful admin panel can manage the order, create unlimited category and restaurant menu, also can configurations such as currency, tax, user, etc from admin panel on the web. you can add, update, update or change that restaurant menu, category, tax, currency and change admin password with generate password, etc.&lt;/p&gt; &lt;p&gt;This application created by Android for client side and then PHP MySql for Admin side. Run under Android platform which is the most popular operating system in the world. Using this application you can save your money and time in creating mobile restaurant reservation application.&lt;/p&gt;</string>
    <string name="rate_summary">Give your rate and feedback</string>
    <string name="search_hint">Hint</string>
    <string name="search_query_text">Search…</string>
    <string name="sending_alert">Sending data. Please wait …</string>
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>
    <string name="share_summary">Share to your friends</string>
    <string name="slider_text1">Lorem ipsum dolor sit amet</string>
    <string name="slider_text2">Consectetur adipiscing elit.</string>
    <string name="slider_text3">Portenta haec esse dicit</string>
    <string name="slider_text4">Neque ea ratione ullo modo posse vivi</string>
    <string name="social_tab1">Facebook</string>
    <string name="social_tab2">Twitter</string>
    <string name="success_order">&lt;p&gt;&lt;b&gt;Congratulations,&lt;/b&gt; your Order has been successfully sent..&lt;/p&gt; &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Virtutis, magnitudinis animi, patientiae, fortitudinis fomentis dolor mitigari solet. Eademne, quae restincta siti? Non laboro, inquit, de nomine. Cum ageremus, inquit, vitae beatum et eundem supremum diem, scribebamus haec. Ex rebus enim timiditas, non ex vocabulis nascitur. Duo Reges: constructio interrete.&lt;/p&gt;</string>
    <string name="title_about">About</string>
    <string name="title_app_copyright">Copyright</string>
    <string name="title_app_email">Email</string>
    <string name="title_app_more">More</string>
</resources>