<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<include android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/toolbar" />-->

    <ScrollView android:id="@+id/sclDetail" android:visibility="gone"
        android:scrollbars="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" android:fadeScrollbars="true">

        <android.support.v7.widget.CardView
            android:id="@+id/cv" android:layout_width="match_parent" android:layout_height="wrap_content"
            app:cardCornerRadius="4dp" app:cardElevation="3sp" app:cardUseCompatPadding="true">


            <LinearLayout android:orientation="vertical" android:id="@+id/lytContent" android:padding="10dp"
                android:layout_width="match_parent" android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TextInputLayout1" android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/edtName" android:padding="10dp" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                        android:hint="@string/checkout_your_name"
                        android:inputType="text">

                    </EditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:id="@+id/TextInputLayout2"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                    <EditText android:id="@+id/edtNumberOfPeople" android:padding="10dp"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp" android:hint="@string/checkout_number_of_people"
                        android:ems="10" android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:id="@+id/TextInputLayout5"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                    <EditText android:id="@+id/edtPhone" android:padding="10dp" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                        android:hint="@string/checkout_phone_number" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:id="@+id/TextInputLayout7"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                    <EditText android:id="@+id/edtEmail" android:padding="10dp" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                        android:hint="@string/checkout_email" android:ems="10" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout android:orientation="horizontal"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                    <com.balysv.materialripple.MaterialRippleLayout android:id="@+id/rippleDate"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/ripple_color" app:mrl_rippleOverlay="true"
                        app:mrl_rippleAlpha="0.2" app:mrl_rippleHover="true" app:mrl_rippleDelayClick="true">

                        <Button android:textColor="@color/white" android:id="@+id/btnDate"
                            android:background="@color/colorPrimary" android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:text="@string/checkout_set_date" />

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_toRightOf="@+id/rippleDate" android:layout_toEndOf="@+id/rippleDate">


                        <EditText android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                            android:id="@+id/dateText" android:padding="10dp" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:editable="false" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout android:orientation="horizontal" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="10dp">

                    <com.balysv.materialripple.MaterialRippleLayout android:id="@+id/rippleTime"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/ripple_color" app:mrl_rippleOverlay="true"
                        app:mrl_rippleAlpha="0.2" app:mrl_rippleHover="true" app:mrl_rippleDelayClick="true">

                        <Button android:textColor="@color/white" android:id="@+id/btnTime" android:background="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkout_set_time" />

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_toRightOf="@+id/rippleTime">

                        <EditText android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                            android:id="@+id/timeText" android:padding="10dp" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:editable="false" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <EditText android:enabled="false" android:textColor="@color/hint"
                    android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/edtOrderList"
                    android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
                    android:hint="@string/checkout_order_list"
                    android:inputType="text"/>
                <android.support.design.widget.TextInputLayout android:id="@+id/TextInputLayout8"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                    <EditText android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/edtComment" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:hint="@string/checkout_add_comment" android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple" android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:mrl_rippleColor="@color/ripple_color"
                    app:mrl_rippleOverlay="true" app:mrl_rippleAlpha="0.2" app:mrl_rippleHover="true" app:mrl_rippleDelayClick="true">

                    <Button android:textStyle="bold" android:textColor="@color/white"
                        android:id="@+id/btnSend" android:background="@color/colorPrimary"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:text="@string/checkout_send_order" />


                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
    <ProgressBar android:id="@+id/prgLoading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    <TextView android:id="@+id/txtAlert" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/failed_connect_network" android:layout_centerInParent="true" />
</RelativeLayout>
