<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<include android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/toolbar" />-->

    <ScrollView android:id="@+id/sclDetail" android:visibility="visible"
        android:scrollbars="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" android:fadeScrollbars="true">

        <android.support.v7.widget.CardView
            android:id="@+id/cv" android:layout_width="match_parent" android:layout_height="wrap_content"
            app:cardCornerRadius="4dp" app:cardElevation="3sp" app:cardUseCompatPadding="true">


            <LinearLayout android:orientation="vertical" android:id="@+id/lytContent" android:padding="10dp"
                android:layout_width="match_parent" android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TextInputLayout1" android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/edtName" android:padding="10dp" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                        android:hint="@string/checkout_your_name"
                        android:inputType="textPersonName">

                    </EditText>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout android:id="@+id/TextInputLayout7"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                    <EditText android:id="@+id/edtEmail" android:padding="10dp" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                        android:hint="@string/checkout_email" android:ems="10" android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout android:id="@+id/TextInputLayout8"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                    <EditText android:id="@+id/edtOrderList" android:padding="10dp" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                        android:hint="Comment" android:ems="10" android:inputType="text" />
                </android.support.design.widget.TextInputLayout>



                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple" android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:mrl_rippleColor="@color/ripple_color"
                    app:mrl_rippleOverlay="true" app:mrl_rippleAlpha="0.2" app:mrl_rippleHover="true" app:mrl_rippleDelayClick="true">

                    <Button android:textStyle="bold" android:textColor="@color/white"
                        android:id="@+id/btnSend" android:background="@color/colorPrimary"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:text="@string/checkout_send_order" />


                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
    <ProgressBar android:id="@+id/prgLoading" android:layout_width="wrap_content" android:visibility="gone" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    <TextView android:id="@+id/txtAlert" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/failed_connect_network" android:layout_centerInParent="true" />
</RelativeLayout>
